a classe java que faz o servidor está funcionando

--- a/pages/userPageLogOn.html
+++ b/pages/userPageLogOn.html
@@ -67,7 +67,7 @@
                             <i class="fa fa-user fa-2x">
                             </i>
                         </span>
-                        <input class="ccformfield" id="name" placeholder="Nome Completo" type="text">
+                        <input class="ccformfield" id="name" placeholder="Nome Completo" name="nome" type="text">
                         </input>
                     </div>
                     <div class="ccfield-prepend">
@@ -75,7 +75,7 @@
                             <i class="fa fa-envelope fa-2x">
                             </i>
                         </span>
-                        <input class="ccformfield" id="email" placeholder="Email" type="text">
+                        <input class="ccformfield" id="email" name="email" placeholder="Email" type="text">
                         </input>
                     </div>
                     <div class="ccfield-prepend">
@@ -83,7 +83,7 @@
                             <i class="fa fa-map-marker fa-2x">
                             </i>
                         </span>
-                        <input class="ccformfield" id="city" placeholder="Cidade" type="text">
+                        <input class="ccformfield" id="city" name="cidade" placeholder="Cidade" type="text">
                         </input>
                     </div>
                     <div class="ccfield-prepend">
@@ -91,7 +91,7 @@
                             <i class="fa fa-heart fa-2x">
                             </i>
                         </span>
-                        <input class="ccformfield" id="password" placeholder="Senha" type="text">
+                        <input class="ccformfield" id="password" placeholder="Senha" name="senha" type="password">
                         </input>
                     </div>
                     <div class="ccfield-prepend">
@@ -99,7 +99,7 @@
                             <i class="fa fa-tint fa-2x">
                             </i>
                         </span>
-                        <select class="ccformfield" id="bloody" title="Tipo Sanguíneo">
+                        <select class="ccformfield" id="bloody" name="tipoSanguineo" title="Tipo Sanguíneo">
                             <option>
                                 Tipo Sanguíneo
                             </option>
@@ -222,7 +222,7 @@
                             </button>
                         </div>
                         <div class="col-lg-3 col-xs-6">
-                            <input class="ccbtn" onclick="userInput();" value="Enviar">
+                            <input class="ccbtn" type="submit" onclick="userInput();" value="Enviar">
                             </input>
                         </div>
                     </div>
