Login, sessão do usuário e alteração de dados cadastrados foram finalizados

--- a/pages/userPageLogOn.html
+++ b/pages/userPageLogOn.html
@@ -39,7 +39,7 @@
             <h1>Preencha com o seus dados</h1> 
         </header>
         <div class="wrapper">
-            <form class="ccform" id="myForm" action="http://127.0.0.1:8080/adicionarDoador" method="POST">
+            <form class="ccform" id="myForm" action="http://127.0.0.1" method="POST">
 
                 <div class="ccfield-prepend">
                     <span class="ccform-addon"><i class="fa fa-user fa-2x"></i></span>
