Finished the necessary alterations to use SQL Server as DB

--- a/frontend/pages/userPageLogOn.html
+++ b/frontend/pages/userPageLogOn.html
@@ -47,17 +47,29 @@
                 </div>
 
                 <div class="ccfield-prepend">
+                    <span class="ccform-addon"><i class="fa fa-user fa-2x"></i></span>
+                    <input class="ccformfield" type="text" id="cpf" name="cpf" placeholder="CPF">
+                </div>
+
+                <div class="ccfield-prepend">
                     <span class="ccform-addon"><i class="fa fa-envelope fa-2x"></i></span>
                     <input class="ccformfield" type="text" id="email" name="email" placeholder="Email">
                 </div>
                 <div class="ccfield-prepend">
                         <span class="ccform-addon"><i class="fa fa-heart fa-2x"></i></span>
                         <input class="ccformfield" id="password" placeholder="Senha" type="password">
-                    </div>
+                </div>
+           
                 <div class="ccfield-prepend">
                     <span class="ccform-addon"><i class="fa fa-map-marker fa-2x"></i></span>
-                    <input class="ccformfield" type="text" id="city" placeholder="Cidade">
+                    <select class="ccformfield" id="city" title="Cidade">
+                        <option>Cidade</option>
+                        <option>Belo Horizonte</option>
+                        <option>Contagem</option>
+                        <option>Betim</option>
+                    </select>
                 </div>
+
                 <div class="ccfield-prepend">
                     <span class="ccform-addon"><i class="fa fa-tint fa-2x"></i></span>
                     <select class="ccformfield" id="bloody" title="Tipo Sanguíneo">
