minor bug corrected in the log on page

--- a/frontend/pages/userPageLogOn.html
+++ b/frontend/pages/userPageLogOn.html
@@ -163,7 +163,7 @@
                      </div>
 
                      <div class="col-lg-3 col-xs-6">
-                        <input class="ccbtn" type="submit" value="Enviar">
+                        <input class="ccbtn" type="submit" id="submit" value="Enviar">
                      </div>
                 </div>
             </form>
